--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         
         <h2>My Early Days</h2>
         <h3><a href="1 - birthday_invite.html">Birthday</a></h3>
-        <img src="assets/images/birthday.png"  alt="birthday_project" height="300"/>
+        <img src="./assets/images/birthday.png"  alt="birthday_project" height="300"/>
         <h3><a href="2 - favorite_movie.html">Movie Ranking</a></h3>
-        <img src="assets/images/fav-movie.png" alt="fav_movie_project" height="200"/>
+        <img src="./assets/images/fav-movie.png" alt="fav_movie_project" height="200"/>
         <hr>
         <a href="about.html">About Me</a> | 
         <a href="contact.html">Contact Me</a>
