modified:   about.html 	modified:   index.html

--- a/about.html
+++ b/about.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head charset="UTF-8">
-        <title>About Me</title>
-    </head>
-    <body>
-        <h2>My Early Days</h2>
-        <!--<h3><a href="1 - birthday_invite.html">Birthday</a></h3>
-        <img src="assets/images/birthday.png"  alt="birthday_project"/>
-        <h3><a href="2 - favorite_movie.html">Favorite Movies</a></h3>
-        <img src="assets/images/fav-movie.png" alt="fav_movie_project"/>-->
-    </body>
+
+<head charset="UTF-8">
+    <title>My Resume</title>
+</head>
+
+<body>
+    <h1>Daniel Hammond</h1>
+    <p>
+        Address: BG93 Jupiter Road, Lashibi, Tema West, GT-351-9729<br />
+        Phone: 054 200 3727<br />
+        Email: nii.danielhammond@gmail.com
+    </p>
+    <h2>Summary</h2>
+    <p>Experienced Tech Professional with a decade of expertise in Data Analytics and Web Development. Proficient in
+        statistical analysis, data visualization, and adept at Python/R programming. Crafting engaging web experiences
+        using HTML, CSS, and JavaScript. Expert collaborator and effective communicator, delivering impactful solutions
+        for business success. Let's drive innovation together!</p>
+    <h2>Experience</h2>
+    <h3>Data Analyst | Absa Bank Ghana | Accra, Greater-Accra | 2019 - Present</h3>
+    <p>
+    <ul>
+        <li>Managed and executed over 20 data analysis projects, generating valuable insights for clients.</li>
+        <li>Collaborated with a cross-functional team of 10 analysts, achieving a 20% increase in project efficiency.
+        </li>
+        <li>Implemented SQL query optimizations, resulting in a 100% reduction in query runtime.</li>
+    </ul>
+    </p>
+
+    <h3>Mobile Financial Service Analyst | Airteltigo | Accra, Greater-Accra | 2018 - 2019</h3>
+    <p>
+        <li>Conducted statistical analysis on customer data, leading to a 10% increase in customer retention and a 5%
+            improvement in customer satisfaction.</li>
+        <li>Designed and implemented dashboards resulting in a 60% increase in fault identification rate on the mobile
+            money platform.</li>
+        <li>Collaborated with product teams to define data requirements, contributing to a 30% increase in product
+            adoption.</li>
+    </p>
+
+    <h3>Web Developer | Lumen Analytics | Tema, Greater-Accra | 2012 - 2018</h3>
+        <p>
+        <ul>
+            <li>Developed and maintained responsive web applications, contributing to a 30% increase in website traffic.
+            </li>
+            <li>Implemented SEO strategies, leading to a 40% improvement in search engine rankings.</li>
+            <li>Collaborated with UX designers to create user-friendly interfaces, resulting in a 25% decrease in bounce
+                rate.</li>
+        </ul>
+
+        </p>
+        <h2>Education:</h2>
+        <h3>Master of Science in Financial Engineering | Worldquant University | New Orleans, Louisiana | 2020</h3>
+        <p>
+        <ul>
+            <li>Concentration in Statistical Analysis & Python Programming</li>
+            <li>Graduated with Distinction</li>
+        </ul>
+
+        </p>
+        <h3>Master of Science in Biotechnology | University of Greenwich | London | 2010</h3>
+        <p>
+        <ul>
+            <li>Concentration in Biostatistics Statistical Analysis & Python Programming</li>
+            <li>Graduated with Distinction</li>
+        </ul>
+
+        </p>
+        <h3>Bachelor of Science in Biochemistry | Kwame Nkrumah Uni. Science & Technology | Kumasi, Ashanti | 2008</h3>
+
+        <h3>High School Certificate | Presbyterian Boys’ | Accra, Greater-Accra | 2003</h3>
+
+        <h2>Skills:</h2>
+        <p>
+        <ul>
+            <li>Data Analysis</li>
+            <li>Statistical Analysis</li>
+            <li>Data Visualization</li>
+            <li>Machine Learning</li>
+            <li>Database Management</li>
+            <li>Python and R Programming</li>
+            <li>SQL and NoSQL Databases</li>
+            <li>Tableau and Power BI</li>
+            <li>Advanced Excel</li>
+            <li>AWS</li>
+        </ul>
+        </p>
+        <h2>Certifications:</h2>
+        <p>
+        <ul>
+            <li>Google Data Analytics Professional Certificate</li>
+        </ul>
+        </p>
+
+        <h2>Languages:</h2>
+        <li>English (Fluent)</li>
+
+</body>
+
 </html>
