modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head charset="UTF-8">
         <title>My Portfolio</title>
-        <link rel="stylesheet" href="./assets/sytles/main.css"/>
+        <link rel="stylesheet" href="./assets/styles/main.css"/>
     </head>
     <body>
         <h1>Portfolio de NiiOto</h1>
