--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <hr>
         <a href="about.html">About Me</a> | 
         <a href="contact.html">Contact Me</a>
-        </ul>
+        <a href="quotes.html">Quotes</a>    
+    </ul>
     </body>
 </html>
