modified:   quotes.html

--- a/quotes.html
+++ b/quotes.html
@@ -29,7 +29,10 @@
             <p class="quote-paragraph">A life lived in love will never be dull.</p>
         </div>
     </div>
-    
+    <hr>
+    <a href="about.html">About Me</a> | 
+    <a href="contact.html">Contact Me</a>
+    <a href="quotes.html">Quotes</a> 
 </body>
 
 </html>
