--- a/quotes.html
+++ b/quotes.html
@@ -3,7 +3,7 @@
 
 <head charset="UTF-8">
     <title>Quotes</title>
-    <link href="./assets/style/quotes.css" rel="stylesheet" />
+    <link href="./assets/styles/quotes.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
     </div>
     <hr>
     <a href="about.html">About Me</a> | 
-    <a href="contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a> |
     <a href="quotes.html">Quotes</a> 
 </body>
 
